# sparseful-2026-pmc-plotter

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  release.config.js
.github/workflows/: build-and-deploy.yml  dispatcher.yml
src/: main.py
