[tool.poetry]
name = "experiments-2025-TCD-marl-neighbor-TL"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
pandas = "^2.3.3"
numpy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"